RavenDB-16685 Ongoing Stats Graph + Index Performance Graph : Fix missing color for 'axisText'

--- a/src/Raven.Studio/wwwroot/Content/css/pages/index-performance.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/index-performance.less
@@ -10,11 +10,7 @@
     }
 
     .axis {
-        color: @layout-border;
-    }
-
-    .axisText {
-        color: @on-base-background-color;
+        color: fadeout(@text-color, 30%);
     }
 
     .gaps {
